remove circus living

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="SuiteSelect - Premium vending solutions with THE CIRCUS LIVING. Enhance your property's guest experience with AI-based vending machines."
+      content="SuiteSelect - Premium vending solutions. Enhance your property's guest experience with AI-based vending machines."
     />
     <meta
       name="keywords"
-      content="vending machines, hotel amenities, guest experience, THE CIRCUS LIVING, SuiteSelect"
+      content="vending machines, hotel amenities, guest experience, SuiteSelect"
     />
     <link
       rel="icon"
@@ -17,7 +17,7 @@
       href="./assets/suiteselect-logo.svg"
     />
     <title>
-      SuiteSelect - Premium Vending Solutions with THE CIRCUS LIVING
+      SuiteSelect - Premium Vending Solutions
     </title>
     <script type="module" src="./frontend.tsx" async></script>
   </head>
