--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,7 @@
       type="image/svg+xml"
       href="./assets/suiteselect-logo.svg"
     />
-    <title>
-      SuiteSelect - Premium Vending Solutions
-    </title>
+    <title>SuiteSelect - Premium Vending Solutions</title>
     <script type="module" src="./frontend.tsx" async></script>
   </head>
   <body>
